Replace Non-Coprime Numbers in Array